--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
     testCompile 'junit:junit:4.12'
 }
